# godot-audit

./: .gitignore  CHANGELOG.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
src/godot_audit/: __init__.py  cli.py
tests/: test_accept_pair.py  test_auditor.py  test_cli.py  test_normalize_variants.py  test_rendering.py  test_to_snake_case.py
