[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "godot-audit"
dynamic = ["version"]
description = "Read-only structural auditor for Godot projects. Checks scene/script colocation (split or colocated layouts), snake_case naming, stale _old/_bak files, orphan .uid/.import companions, and near-duplicate filenames while skipping numbered variants. Rich terminal output, JSON/Markdown formats, CI-friendly exit codes. Python 3.14+."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Olivier Pons", email = "olivier.pons@gmail.com" },
]
keywords = [
    "godot",
    "gdscript",
    "audit",
    "linter",
    "project-structure",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "cli-toolkit[rich] @ git+https://github.com/olivierpons/cli-toolkit.git@v0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
godot-audit = "godot_audit.cli:main"

[project.urls]
Homepage = "https://github.com/olivierpons/godot-audit"
Repository = "https://github.com/olivierpons/godot-audit"
Issues = "https://github.com/olivierpons/godot-audit/issues"
Changelog = "https://github.com/olivierpons/godot-audit/blob/main/CHANGELOG.md"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/godot_audit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/godot_audit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/godot_audit",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=godot_audit",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
